implement all logic for tcikerservice, update contract, implement authentication service and controller
