# src/main/java/authentication/controller/AuthenticationController.java
@@ -1,0 +1,9 @@
+package authentication.controller;
+
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+public class AuthenticationController {
+
+
+}
