# src/main/java/ticket/entity/TicketCategory.java
@@ -1,0 +1,11 @@
+package ticket.entity;
+
+public enum TicketCategory {
+    PLUMBING,
+    ELECTRICAL,
+    HVAC,
+    CARPENTRY,
+    APPLIANCE,
+    CLEANING,
+    OTHER
+}
