# src/main/java/ticket/entity/TicketType.java
@@ -1,0 +1,10 @@
+package ticket.entity;
+
+public enum TicketType {
+    LEAK,
+    CLOGGED_DRAIN,
+    LIGHT_FIXTURE,
+    POWER_OUTAGE,
+    BROKEN_WINDOW,
+    DOOR_REPAIR
+}
